[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Objects/KitchenObjects/SelectableStove.gd" type="Script" id=1]
[ext_resource path="res://Assets/Kitchen/Kitchen_Oven_AlertLevel2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Kitchen/Kitchen_Oven_AlertOutline.png" type="Texture" id=3]
[ext_resource path="res://Sounds/WindowShutting.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Kitchen/Kitchen_Oven_Base.png" type="Texture" id=5]
[ext_resource path="res://Sounds/WindowOpening.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Kitchen/Kitchen_Oven_Tilt.png" type="Texture" id=7]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.627329, 1 )
colors = PoolColorArray( 0.909804, 0.129412, 0.129412, 1, 1, 1, 1, 0.792157, 1, 0.772549, 0, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 5
emission_ring_radius = 30.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 3, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 1.0
orbit_velocity = 0.1
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_random = 0.5
scale = 6.0
scale_random = 1.0
color = Color( 0.945098, 0.364706, 0.0509804, 1 )
color_ramp = SubResource( 9 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 29.0176
height = 60.9188

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 129.5, 136 )

[sub_resource type="Animation" id=6]
resource_name = "BlinkState1"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.815686, 0.121569, 0.121569, 1 ), Color( 1, 0.407843, 0.407843, 1 ), Color( 0.815686, 0.121569, 0.121569, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 3, 3, 0.3 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "BlinkState2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.870588, 0.588235, 0.054902, 1 ), Color( 1, 0.8, 0.419608, 1 ), Color( 0.870588, 0.588235, 0.054902, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 3, 3, 0.3 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[node name="SelectableStove" type="Node2D"]
script = ExtResource( 1 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="Placemat" type="Sprite" parent="."]
modulate = Color( 0.372549, 0.72549, 0.129412, 0.533333 )
centered = false

[node name="DeliveryPlacemat" type="Sprite" parent="."]
modulate = Color( 0.372549, 0.72549, 0.129412, 0.533333 )
centered = false

[node name="DeliveryPromptAnimation" type="AnimationPlayer" parent="DeliveryPlacemat"]

[node name="DecaySprite" type="Sprite" parent="."]

[node name="TiltSprite" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false

[node name="GasFlame" type="Particles2D" parent="TiltSprite"]
position = Vector2( 224, 67 )
amount = 200
lifetime = 0.6
process_material = SubResource( 10 )

[node name="GasFlame2" type="Particles2D" parent="TiltSprite"]
position = Vector2( 126, 70 )
amount = 200
lifetime = 0.6
process_material = SubResource( 10 )

[node name="DeliveryArea" type="Area2D" parent="."]
position = Vector2( 277, 675 )

[node name="DeliveryShape" type="CollisionShape2D" parent="DeliveryArea"]
position = Vector2( 2, -84 )
rotation = 1.69781
shape = SubResource( 4 )

[node name="SelectArea" type="Area2D" parent="."]
position = Vector2( 355, 354 )

[node name="SelectionShape" type="CollisionShape2D" parent="SelectArea"]
position = Vector2( -179, -174 )
shape = SubResource( 5 )

[node name="OutlineAlert" type="Sprite" parent="."]
modulate = Color( 0.815686, 0.121569, 0.121569, 1 )
position = Vector2( 180, 180 )
texture = ExtResource( 2 )

[node name="OutlineAlertAnimation" type="AnimationPlayer" parent="OutlineAlert"]
anims/BlinkState1 = SubResource( 6 )
anims/BlinkState2 = SubResource( 7 )

[node name="OutlineSelection" type="Sprite" parent="."]
modulate = Color( 0.827451, 0.870588, 0.054902, 1 )
texture = ExtResource( 3 )
centered = false

[node name="Cursor" type="Sprite" parent="."]
z_index = 10

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 3000.0
bus = "SFX"

[node name="DropSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 3000.0
bus = "SFX"

[connection signal="input_event" from="DeliveryArea" to="." method="_on_SelectArea_input_event"]
[connection signal="mouse_entered" from="DeliveryArea" to="." method="_on_SelectArea_mouse_entered"]
[connection signal="mouse_exited" from="DeliveryArea" to="." method="_on_SelectArea_mouse_exited"]
[connection signal="input_event" from="SelectArea" to="." method="_on_SelectArea_input_event"]
[connection signal="mouse_entered" from="SelectArea" to="." method="_on_SelectArea_mouse_entered"]
[connection signal="mouse_exited" from="SelectArea" to="." method="_on_SelectArea_mouse_exited"]
